# hailo-rpi5-examples

./: .gitignore  LICENSE  MANIFEST.in  README.md  alembic.ini  ci.yaml  cleanup_installation.sh  compile_postprocess.sh  config-example.json  config.json  config.yaml  convert_video.sh  detection.py  download_hefs.sh  download_resources.sh  fan_control.py  hailo_python_installation.sh  install.py  install.sh  kill_watcher.sh  meson.build  pyproject.toml  requirements.txt  resources  run_tests.sh  setup.py  setup_env.sh  start_watcher.sh  start_watcher_backup.sh  start_watcher_on_login.sh
apps/face_recognition/: face_recognition.py  face_recognition_pipeline.py  face_ui_callbacks.py  face_ui_elements.py
basic_pipelines/: alembic.ini  camera_control_server.py  camera_deplacement.py  depth.py  detection.py  detection_pipeline.py  detection_service.py  detection_simple.py  detection_v11.py  get_usb_camera.py  hailo_common_funcs.py  hailo_rpi_common.py  hailo_rpi_common_origin.py  instance_segmentation.py  instance_segmentation_pipeline.py  instance_segmentation_pipeline_modif.py  instance_segmentation_test_camera.py  logger_config.py  pose_estimation.py  pose_estimation_pipeline.py  predicter.py  relabel.py  rstp_server.py  unix_domain_socket_server.py  watcher.py
basic_pipelines/alembic/: env.py
basic_pipelines/alembic/versions/: 73ce91d78a95_initial_migration.py
basic_pipelines/app/: config.py  crud.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
basic_pipelines/app/templates/: index.html  login.html  profile.html  register.html  stream.html
basic_pipelines/gstshark_2024-12-28_20:13:16/: datastream  metadata
basic_pipelines/web_app/: app.py
basic_pipelines/web_app/templates/: index.html
community_projects/: README.md  community_projects.md
community_projects/Navigator/: README.md  download_resources.sh  navigator.py  requirements.txt
community_projects/Navigator/modules/: frame_grabber.py  hailo.py  image_recorder.py  matching_demo.py  method.py  model.py  xfeat.py
community_projects/Navigator/server/: main.py  move.py
community_projects/NeoPixel/: README.md  example.py  follow_detection.py  requirements.txt
community_projects/RoboChess/: .gitignore  README.md  download_resources.sh  infer.py  next_step_calculator.py  postprocess.py  preprocess.py  requirements.txt  voicer.py
community_projects/TAILO/: README.md  download_resources.sh  main.py  requirements.txt
community_projects/TAILO/arm_control/: arm_control.py
community_projects/TAILO/treat_control/: treat_control.py
community_projects/TEMPO/: .gitignore  MIDI.py  README.md  app_hailo.py  app_heart_beat.py  bpm_measurement.py  download_files.sh  midi_model.py  midi_synthesizer.py  midi_tokenizer.py  requirements.txt  sound_stream.py
community_projects/UnixDomainSocketIntegration/: README.md  detection_service.py  requirements.txt
community_projects/detection_cropper/: README.md  app.py  pipeline.py
community_projects/detection_cropper/cpp/: detections_cropper.cpp  detections_cropper.hpp  meson.build
community_projects/detection_cropper/tests/: test_app.py  test_pipeline.py
community_projects/dynamic_captioning/: README.md  caption.py  download_resources.sh  requirements.txt
community_projects/face_recognition/: README.md  app_db.py  compile_postprocess.sh  db_handler.py  download_resources.sh  embedding_visualizer.py  face_recognition_pipeline_db.py  gradio_app.py  install.sh  meson.build  requirements.txt
community_projects/face_recognition/cpp/: arcface.cpp  arcface.hpp  face_align.cpp  face_align.hpp  gallery.hpp  gsthailogallery.cpp  gsthailogallery.hpp  meson.build  scrfd.cpp  scrfd.hpp  vms_croppers.cpp  vms_croppers.hpp
community_projects/face_recognition/resources/: arcface_mobilefacenet.hef  scrfd.json
community_projects/face_recognition/web/: web_app.py
community_projects/fruit_ninja/: README.md  __init__.py  fruit_ninja_game.py  pygame_fruit_ninja.py
community_projects/fruit_ninja/tests/: __init__.py  test_fruit_ninja_game.py  test_pygame_fruit_ninja.py
community_projects/sailted_fish/: README.md  sailted_fish.py  sailted_fish_music.py  sailted_fish_music2.py  start_gui.py
community_projects/temaplate_example/: README.md  downdload_resources.sh  requirments.txt  template_example.py
community_projects/traffic_sign_detection/: README.md  app.py  gps_calculations.py  gps_test.py  install.sh  post_process_csv.py
community_projects/traffic_sign_detection/tests/: test_app.py  test_get_usb_gps.py  test_gps_calculations.py
community_projects/traffic_sign_recognition/: app.py  get_usb_gps.py  pipeline.py  requirements.txt
community_projects/tsr/: README.md
community_projects/tsr/tests/: test_pipeline.py  (+1 more)
community_projects/wled_display/: README.md  drawing_board.py  gesture_drawing_app.py  particle_simulation.py  requirements.txt  wled_display.py  wled_pose_estimation.py  wled_pose_estimation_particles.py  wled_segmentation.py
config/: config.yaml
cpp/: hailo_nms_decode.hpp  mask_decoding.hpp  meson.build  remove_labels.cpp  remove_labels.hpp  yolo_hailortpp.cpp  yolo_hailortpp.hpp  yolov5seg.cpp  yolov5seg.hpp  yolov8pose_postprocess.cpp  yolov8pose_postprocess.hpp
doc/: Retraining-example.md  basic-pipelines.md  development_guide.md  install-raspberry-pi5.md  quick-start.md  retraining-example.md
hailo_apps_infra/: detection_pipeline.py  get_usb_camera.py  gstreamer_app.py  gstreamer_helper_pipelines.py  hailo_rpi_common.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
hailo_rpi5_examples/: detection.py  hailo_common_funcs.py  instance_segmentation.py  pose_estimation.py  pose_estimaton.py
local_resources/: yolov5m_seg.json
resources/: barcode-labels.json  yolov5n_seg.json  yolov8l_nms_config.json  yolov8m_nms_config.json
test_tools/: event_listener.py
tests/: test_advanced.py  test_edge_cases.py  test_face_recognition.py  test_face_recon.py  test_hailo_rpi5_examples.py  test_infra.py  test_sanity_check.py
tests/archive/: archived_test_edge_cases.py
tests/test_resources/: requirements.txt
(+27 files in other folders)
